--- a/Select Menu/style.css
+++ b/Select Menu/style.css
@@ -27,6 +27,7 @@
 
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 6px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 
   display: flex;
   align-items: center;
@@ -41,6 +42,7 @@
 #list {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
   border-radius: 6px;
   overflow: hidden;
 }
